1998-03-28  Thomas E. Dickey  <dickey@clark.net>

	* Makefile.in: updates to sync with ncurses 4.2

1998-02-11  Thomas E. Dickey  <dickey@clark.net>

	* ncurses_tst.hin: FROM_KEYS

1998-01-09  Daniel.Weaver

	* tack.c, Makefile.in, tack.h, control.c, color.c, charset.c, ansi.c, sysdep.c, sync.c, scan.c, pad.c, output.c, modes.c, menu.c, init.c, fun.c, edit.c, crum.c, HISTORY, COPYING:
	tack-1.00

1998-01-03  Thomas E. Dickey  <dickey@clark.net>

	* tack.h: moved ncurses' externs to tic.h

	* edit.c: split-out _nc_tic_expand(), as per DW's request.

	* sysdep.c: nits (we don't _need_ time.h?)

	* tack.h: SCO's compiler doesn't like array-of-const

1998-01-02  Thomas E. Dickey  <dickey@clark.net>

	* control.c: work with no 'gettimeofday()'
	workaround for SCO 3.x compiler which gets confused by array of const.

	* output.c, edit.c, fun.c: SCO's compiler doesn't like array-of-const

	* ansi.c: SCO's compiler: parameter promotion warnings.

1997-12-28  Thomas E. Dickey  <dickey@clark.net>

	* tack.h: first cut of fixes for AIX/SCO/CLIX

	* sysdep.c, control.c: first cut of fixes for AIX/CLIX/SCO

1997-12-27  Thomas E. Dickey  <dickey@clark.net>

	* ansi.c, charset.c, control.c, crum.c, edit.c, fun.c, init.c, menu.c, modes.c, output.c, scan.c, sync.c, sysdep.c, tack.c:
	integration with ncurses: restructured includes, fix gcc warnings

	* pad.c:
	integration with ncurses: restructures includes, fix gcc warnings

	* color.c: typo

	* tack.h:
	integration with ncurses: reordered headers, provide fallback definitions
	for the stuff we get from ncurses_cfg.h, make some stuff const.

	* Makefile.in: use HAVE_SELECT from configure-script

	* color.c:
	integration with ncurses: move most headers into tack.h, fix gcc warnings

	* Makefile.in: we'll have a config.h (actually ncurses_cfg.h)

	* modules: set base-subset

1997-12-24  Daniel.Weaver

	* HISTORY: ncurses-4.1-971220

1997-12-22  Daniel.Weaver

	* ansi.c, tack.1: ncurses-4.1-971220

1997-12-02  Daniel.Weaver
